--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,6 @@
 server {
   listen 80;
+
   location / {
     root /usr/share/nginx/html;
     index index.html;
@@ -7,6 +8,6 @@ server {
   }
 
   location /api/ {
-    proxy_pass http://backend:3001/;
+    proxy_pass http://backend:3001;
   }
 }
